WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
162632
REGRESSION (
r204552
): Yelp carousel animation is not smooth.
https://bugs.webkit.org/show_bug.cgi?id=162632
Summary
REGRESSION (r204552): Yelp carousel animation is not smooth.
alan
Reported
2016-09-27 13:52:48 PDT
1. Go to any Yelp business page with pictures:
https://www.yelp.com/biz/greenhearts-family-farm-san-francisco-2
2. Hover over the pictures. The animation that brings the photo forward is very jittery on Safari.
Attachments
Patch
(12.30 KB, patch)
2016-09-27 15:33 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-09-27 13:53:07 PDT
rdar://problem/28438516
alan
Comment 2
2016-09-27 15:33:01 PDT
Created
attachment 290016
[details]
Patch
WebKit Commit Bot
Comment 3
2016-09-27 18:19:38 PDT
Comment on
attachment 290016
[details]
Patch Clearing flags on attachment: 290016 Committed
r206483
: <
http://trac.webkit.org/changeset/206483
>
WebKit Commit Bot
Comment 4
2016-09-27 18:19:42 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5
2016-09-28 13:05:07 PDT
ScrollPerf is badly regressed and given the range, this change is the most suspicious.
WebKit Commit Bot
Comment 6
2016-09-29 14:03:20 PDT
Re-opened since this is blocked by
bug 162750
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug