REGRESSION (r204552): Yelp carousel animation is not smooth. https://bugs.webkit.org/show_bug.cgi?id=162632

Reviewed by Simon Fraser.

Source/WebCore:

For composited state changes when the layers don't need rebuilding, the updateGeometry() traversal
is post-order (see webkit.org/162634), so we can't rely on the offsetfromRenderer() value when
computing the graphics layer position on the descendants. We need this workaround until after webkit.org/162634
gets fixed.

Tests: compositing/hidpi-composited-container-and-graphics-layer-gap-changes.html
       compositing/hidpi-negative-composited-bounds-on-device-pixel.html

* rendering/RenderLayerBacking.cpp:
(WebCore::computeOffsetFromAncestorGraphicsLayer):
(WebCore::ComputedOffsets::ComputedOffsets):
(WebCore::ComputedOffsets::fromAncestorGraphicsLayer):
(WebCore::RenderLayerBacking::computeParentGraphicsLayerRect):

LayoutTests:

* compositing/hidpi-composited-container-and-graphics-layer-gap-changes-expected.html: Added.
* compositing/hidpi-composited-container-and-graphics-layer-gap-changes.html: Added.
* compositing/hidpi-negative-composited-bounds-on-device-pixel-expected.html: Added.
* compositing/hidpi-negative-composited-bounds-on-device-pixel.html: Added.


Canonical link: https://commits.webkit.org/180594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206483 268f45cc-cd09-0410-ab3c-d52691b4dbfc